Fix styling of navigation menu on mobile

--- a/_sass/darkmode.scss
+++ b/_sass/darkmode.scss
@@ -1,24 +1,30 @@
 @media (prefers-color-scheme: light){
-  body {
-	background: $light !important;
-	color: black !important;
-  }
-  a,
-  a:visited {
-	  color: $rose-purple-dark;
-  }
+	body {
+		background: $light !important;
+		color: black !important;
+	}
+	a,
+	a:visited {
+	    color: $rose-purple-dark;
+	}
+	.site-nav {
+	    fill: black;
+	}
 }
 
 @media (prefers-color-scheme: dark){
-  body {
-	background: $dark !important;
-	color: white !important;
-  }
+	body {
+		background: $dark !important;
+		color: white !important;
+	}
 	a,
 	a:visited {
 		color: $rose-purple-light;
 	}
 	.site-nav .page-link {
 		color: white !important;
+	}
+	.site-nav {
+		fill: white !important;
 	}
 }
